syntax = "proto3";

package users;

service Users {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
	string email = 1;
}

message CreateUserResponse {
	string message = 1;
	uint64 code = 2;
	string id = 3;
}
